@@ -11,6 +11,8 @@ lib/I18N/Charset.pm
 Makefile.PL
 MANIFEST			This list of files
 META.yml
+MYMETA.json
+MYMETA.yml
 README
 t/bug1.t
 t/enco.t
