@@ -1,0 +1,60 @@
+{
+   "abstract" : "IANA Character Set Registry names and Unicode::MapUTF8",
+   "author" : [
+      "Martin 'Kingpin' Thurn, C<mthurn at cpan.org>, L<http://tinyurl.com/nn67z>."
+   ],
+   "dynamic_config" : 0,
+   "generated_by" : "Module::Install version 1.02, CPAN::Meta::Converter version 2.112621",
+   "license" : [
+      "perl_5"
+   ],
+   "meta-spec" : {
+      "url" : "http://search.cpan.org/perldoc?CPAN::Meta::Spec",
+      "version" : "2"
+   },
+   "name" : "I18N-Charset",
+   "no_index" : {
+      "directory" : [
+         "inc",
+         "t"
+      ]
+   },
+   "prereqs" : {
+      "build" : {
+         "requires" : {
+            "ExtUtils::MakeMaker" : "6.42",
+            "IO::Capture::Stderr" : 0,
+            "Test::More" : 0
+         }
+      },
+      "configure" : {
+         "requires" : {
+            "ExtUtils::MakeMaker" : "6.42"
+         }
+      },
+      "runtime" : {
+         "recommends" : {
+            "App::Info::Lib::Iconv" : 0,
+            "Encode" : 0,
+            "Jcode" : 0,
+            "Test::Pod" : 0,
+            "Test::Pod::Coverage" : 0,
+            "Unicode::Map" : 0,
+            "Unicode::Map8" : 0,
+            "Unicode::MapUTF8" : 0
+         },
+         "requires" : {
+            "IO::String" : 0,
+            "perl" : "5.005"
+         }
+      }
+   },
+   "release_status" : "stable",
+   "resources" : {
+      "license" : [
+         "http://dev.perl.org/licenses/"
+      ]
+   },
+   "version" : "1.401",
+   "x_module_name" : "I18N::Charset"
+}
